--- a/shop1/src/app/app.component.html
+++ b/shop1/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-top-bar></app-top-bar>
 
+<!-- first item -->
+<app-top-bar></app-top-bar>
+<!-- second item -->
 <div class="container">
   <router-outlet></router-outlet>
 </div>
